# actatools

./: .gitattributes  Cargo.toml  readme.md
.github/workflows/: CI.yml  release.yml  rust.yml
docs/: acta-records user guide.md  acta-study User Guide.md  readme_reference.md
examples/acta-records/: example_file_2.txt  record.includes  record.json  record1.json  record2.includes  result.txt
examples/acta-records/test/: manifest.json
examples/acta-records/test2/: example_file_1.txt  manifest.includes  manifest.json
examples/acta-study/: config.toml  design.csv
examples/acta-study/shared/scripts/: postprocess.sh  preprocess.sh  solve.sh
src/: configparsing.rs  conversion.rs  digest.rs  execution.rs  lib.rs  paths.rs  recordcomparison.rs  records.rs  status.rs  studyconfig.rs  studycontrol.rs  uid.rs
src/study/: configreader.rs  mod.rs  studyconfig.rs  studyplan.rs  studyuid.rs
tests/: cli_compare.rs  cli_record.rs  cli_verify.rs
tests/fixtures/: foo.bar  foo2.bar  foo_foo2_record.json  foo_record.json  record.includes
tests/fixtures/expected/: cli_compared_records.txt  cli_record_2.json  cli_record_root_rel_1.json  cli_verified_record2_json.txt  cli_verify_long.txt  cli_verify_multi.txt
