[package]
name = "actatools"
version = "0.4.0"
edition = "2024"

[dev-dependencies]
assert_cmd = "2.2.1"

[dependencies]
anyhow = "1.0.100"
ascii-dag = "0.8.3"
base64 = "0.22.1"
blake3 = "1.8.5"
clap = { version = "4.5.56", features = ["cargo", "derive"] }
pathdiff = "0.2.3"
serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0.149"
thiserror = "2.0.18"
time = {version = "0.3.47", features = ["formatting", "serde"]}
toml = {version = "0.9.11", features = ["serde"]}

[profile.release]
strip = true
